add progress bar for wikipedia dump downloading

--- a/question-answering-challenge.ipynb
+++ b/question-answering-challenge.ipynb
@@ -23,33 +23,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Wikipedia dump downloaded successfully: plwiki-latest-pages-articles.xml.bz2\n"
+      "plwiki-latest-pages-articles.xml.bz2:   1%|          | 19.7M/2.35G [00:22<4:24:50, 158kB/s]"
      ]
     }
    ],
    "source": [
     "import requests\n",
+    "from tqdm import tqdm\n",
     "\n",
-    "url = f'https://dumps.wikimedia.org/plwiki/latest/plwiki-latest-pages-articles.xml.bz2'\n",
-    "    \n",
+    "url = 'https://dumps.wikimedia.org/plwiki/latest/plwiki-latest-pages-articles.xml.bz2'\n",
+    "\n",
     "response = requests.get(url, stream=True)\n",
-    "    \n",
     "if response.status_code == 200:\n",
-    "    file_name = f'plwiki-latest-pages-articles.xml.bz2'\n",
-    "    with open(file_name, 'wb') as file:\n",
-    "        for chunk in response.iter_content(chunk_size=1024):\n",
+    "    file_name = 'plwiki-latest-pages-articles.xml.bz2'\n",
+    "    total_size = int(response.headers.get('content-length', 0))\n",
+    "    chunk_size = 1024  # 1 KB\n",
+    "    with open(file_name, 'wb') as file, tqdm(\n",
+    "        desc=file_name,\n",
+    "        total=total_size,\n",
+    "        unit='B',\n",
+    "        unit_scale=True,\n",
+    "        unit_divisor=1024,\n",
+    "    ) as bar:\n",
+    "        for chunk in response.iter_content(chunk_size=chunk_size):\n",
     "            if chunk:\n",
     "                file.write(chunk)\n",
+    "                bar.update(len(chunk))\n",
     "    print(f'Wikipedia dump downloaded successfully: {file_name}')\n",
     "else:\n",
-    "    print(f\"Failed to download the Wikipedia dump. HTTP Status Code: {response.status_code}\")"
+    "    print(f\"Failed to download the Wikipedia dump. HTTP Status Code: {response.status_code}\")\n"
    ]
   },
   {
@@ -201,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
