add evaluation section

--- a/question-answering-challenge.ipynb
+++ b/question-answering-challenge.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -148,14 +148,6 @@
       "Some weights of GPT2ForQuestionAnswering were not initialized from the model checkpoint at sdadas/polish-gpt2-large and are newly initialized: ['qa_outputs.bias', 'qa_outputs.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
       "Device set to use cpu\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Q: Jak nazywa się bohaterka gier komputerowych z serii Tomb Raider?\n",
-      "A: Playboy\n"
      ]
     }
    ],
@@ -186,11 +178,149 @@
     "\n",
     "def quiz_answer_system(question, es, index_name):\n",
     "    context = retrieve_context(question, es, index_name)\n",
-    "    return generate_answer(question, context)\n",
-    "\n",
+    "    return generate_answer(question, context) if context else \"No answer found\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q: Jak nazywa się bohaterka gier komputerowych z serii Tomb Raider?\n",
+      "A:  w poprzednich częściach, a zamiast tego skupić się na realistycznych proporcjach\n"
+     ]
+    }
+   ],
+   "source": [
     "question = \"Jak nazywa się bohaterka gier komputerowych z serii Tomb Raider?\"\n",
     "answer = quiz_answer_system(question, es, INDEX_NAME)\n",
     "print(f\"Q: {question}\\nA: {answer}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q: Jak nazywa się pierwsza litera alfabetu greckiego?\n",
+      "A:  wielu alfabetom\n",
+      "Expected: alfa\n",
+      "\n",
+      "\n",
+      "Q: Jak nazywa się dowolny odcinek łączący dwa punkty okręgu?\n",
+      "A: No answer found\n",
+      "Expected: cięciwa\n",
+      "\n",
+      "\n",
+      "Q: W którym państwie rozpoczyna się akcja powieści „W pustyni i w puszczy”?\n",
+      "A: No answer found\n",
+      "Expected: w Egipcie\n",
+      "\n",
+      "\n",
+      "Q: Czy w państwach starożytnych powoływani byli posłowie i poselstwa?\n",
+      "A: No answer found\n",
+      "Expected: tak\n",
+      "\n",
+      "\n",
+      "Q: W jakim zespole występowała Hanka w filmie „Żona dla Australijczyka”?\n",
+      "A: No answer found\n",
+      "Expected: Mazowsze\n",
+      "\n",
+      "\n",
+      "Q: W którym państwie leży Bombaj?\n",
+      "A: No answer found\n",
+      "Expected: w Indiach\n",
+      "\n",
+      "\n",
+      "Q: Który numer boczny nosi czołg Rudy z „Czterech pancernych”?\n",
+      "A: No answer found\n",
+      "Expected: 102\n",
+      "\n",
+      "\n",
+      "Q: Co budował w Egipcie inżynier Tarkowski, ojciec Stasia?\n",
+      "A: No answer found\n",
+      "Expected: Kanał Sueski\n",
+      "\n",
+      "\n",
+      "Q: Czy owoce niektórych kaktusów są jadalne?\n",
+      "A: No answer found\n",
+      "Expected: tak\n",
+      "\n",
+      "\n",
+      "Q: Kwartet – to ilu wykonawców?\n",
+      "A: No answer found\n",
+      "Expected: czterech\tczworo\t4\n",
+      "\n",
+      "\n",
+      "Accuracy: 0.00%\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from difflib import SequenceMatcher\n",
+    "import re\n",
+    "\n",
+    "def levenshtein_distance(s1, s2):\n",
+    "    return SequenceMatcher(None, s1, s2).ratio()\n",
+    "\n",
+    "def is_textual_match(pred, gold, threshold=0.5):\n",
+    "    return levenshtein_distance(pred.lower(), gold.lower()) >= threshold\n",
+    "\n",
+    "def is_numerical_match(pred, gold):\n",
+    "    pred_num = re.search(r\"\\d+\", pred)\n",
+    "    gold_num = re.search(r\"\\d+\", gold)\n",
+    "    if pred_num and gold_num:\n",
+    "        return pred_num.group() == gold_num.group()\n",
+    "    return False\n",
+    "\n",
+    "def evaluate(in_file, expected_file):\n",
+    "    with open(in_file, 'r', encoding='utf-8') as file_in, open(expected_file, 'r', encoding='utf-8') as file_expected:\n",
+    "        questions = [line.strip() for line in file_in]\n",
+    "        gold_answers = [line.strip() for line in file_expected]\n",
+    "    \n",
+    "    total = len(questions)\n",
+    "    correct = 0\n",
+    "\n",
+    "    for index, (question, gold) in enumerate(zip(questions, gold_answers)):\n",
+    "        if index >= 10:\n",
+    "            # My machine cannot handle more\n",
+    "            break\n",
+    "        pred = quiz_answer_system(question, es, INDEX_NAME)\n",
+    "        print(f\"Q: {question}\\nA: {pred}\\nExpected: {gold}\\n\\n\")\n",
+    "        if is_numerical_match(pred, gold) or is_textual_match(pred, gold):\n",
+    "            correct += 1\n",
+    "\n",
+    "    accuracy = correct / total\n",
+    "    print(f\"Accuracy: {accuracy:.2%}\")\n",
+    "\n",
+    "DEV_0_IN = \"data/dev-0/in.tsv\"\n",
+    "DEV_0_EXPECTED = \"data/dev-0/expected.tsv\"\n",
+    "evaluate(DEV_0_IN, DEV_0_EXPECTED)"
    ]
   }
  ],
@@ -210,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
