added indexing by paragraph instead of whole article

--- a/question-answering-challenge.ipynb
+++ b/question-answering-challenge.ipynb
@@ -100,6 +100,7 @@
     "    \"mappings\": {\n",
     "        \"properties\": {\n",
     "            \"title\": {\"type\": \"text\"},\n",
+    "            \"paragraph_number\" : {\"type\": \"number\"},\n",
     "            \"content\": {\"type\": \"text\"}\n",
     "        }\n",
     "    }\n",
@@ -121,10 +122,14 @@
     "                        title = article.get('title', '')\n",
     "                        content = article.get('text', '')\n",
     "                        \n",
-    "                        es.index(index=index_name, body={\n",
-    "                            \"title\": title,\n",
-    "                            \"content\": content\n",
-    "                        })\n",
+    "                        paragraphs = content.split(\"\\n\\n\")\n",
+    "                        for i, paragraph in enumerate(paragraphs):\n",
+    "                            if paragraph.strip():\n",
+    "                                es.index(index=index_name, body={\n",
+    "                                    \"title\": title,\n",
+    "                                    \"paragraph_number\": i,\n",
+    "                                    \"content\": content\n",
+    "                                })\n",
     "\n",
     "index_articles('wiki-dump', es, INDEX_NAME)"
    ]
