add question preprocessing

--- a/question-answering-challenge.ipynb
+++ b/question-answering-challenge.ipynb
@@ -138,6 +138,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Retrieve keywords from question"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['wygrał', 'złotą', 'piłkę', '2016']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "\n",
+    "nlp = spacy.load('pl_core_news_sm')\n",
+    "def get_keywords(question):\n",
+    "    doc = nlp(question)\n",
+    "    keywords = [token.text for token in doc if token.pos_ in [\"NOUN\", \"PROPN\", \"VERB\", \"NUM\", \"ADJ\"] and not token.is_stop]\n",
+    "    return keywords"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Searching and answer extraction"
    ]
   },
