run cells for 20 question with radlab-polish

--- a/question-answering-challenge.ipynb
+++ b/question-answering-challenge.ipynb
@@ -3144,7 +3144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3153,7 +3153,7 @@
     "nlp = spacy.load('pl_core_news_sm')\n",
     "def get_keywords(question):\n",
     "    doc = nlp(question)\n",
-    "    keywords = [token.text for token in doc if token.pos_ in [\"NOUN\", \"PROPN\", \"VERB\", \"NUM\", \"ADJ\"] and not token.is_stop]\n",
+    "    keywords = [token.text for token in doc if not token.is_stop]\n",
     "    return \" \".join(keywords)"
    ]
   },
@@ -3166,7 +3166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -3191,7 +3191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3244,7 +3244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3261,7 +3261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -3282,7 +3282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3295,10 +3295,8 @@
       "Score: 0.9942718744277954\n",
       "państwach starożytnych powoływani posłowie poselstwa\n",
       "Pytanie: Czy w państwach starożytnych powoływani byli posłowie i poselstwa?\n",
-      "Najlepsza odpowiedź:  misji.\n",
-      "Posłowie Stanów Zjednoczonych.\n",
-      "\"jeżeli\n",
-      "Score: 0.13182251155376434\n"
+      "Najlepsza odpowiedź:  byli powoływani do służby wojskowej\n",
+      "Score: 0.10543614625930786\n"
      ]
     }
    ],
@@ -3318,7 +3316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3328,7 +3326,7 @@
       "pełnych tygodni rok kalendarzowy\n",
       "Pytanie: Ile pełnych tygodni ma rok kalendarzowy?\n",
       "Najlepsza odpowiedź:  dziesięciu\n",
-      "Score: 0.8895845413208008\n"
+      "Score: 0.8816742300987244\n"
      ]
     }
    ],
@@ -3346,7 +3344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3355,11 +3353,11 @@
      "text": [
       "nazywa pierwsza litera alfabetu greckiego\n",
       "Q: Jak nazywa się pierwsza litera alfabetu greckiego?\n",
-      "A:  Μ\n",
+      "A: Alfa\n",
       "Expected: alfa\n",
       "\n",
       "\n",
-      "Score: 0.96547931432724\n",
+      "Score: 0.953810453414917\n",
       "\n",
       "\n",
       "nazywa dowolny odcinek łączący punkty okręgu\n",
@@ -3369,16 +3367,16 @@
       "Expected: cięciwa\n",
       "\n",
       "\n",
-      "Score: 0.9899412989616394\n",
+      "Score: 0.990360677242279\n",
       "\n",
       "\n",
       "państwie rozpoczyna akcja powieści pustyni puszczy\n",
       "Q: W którym państwie rozpoczyna się akcja powieści „W pustyni i w puszczy”?\n",
-      "A:  Anglików\n",
+      "A:  egipskiego\n",
       "Expected: w Egipcie\n",
       "\n",
       "\n",
-      "Score: 0.9387174248695374\n",
+      "Score: 0.8773928880691528\n",
       "\n",
       "\n",
       "państwach starożytnych powoływani posłowie poselstwa\n",
@@ -3387,7 +3385,7 @@
       "Expected: tak\n",
       "\n",
       "\n",
-      "Score: 0.4257480502128601\n",
+      "Score: 0.4257482886314392\n",
       "\n",
       "\n",
       "zespole występowała Hanka filmie Żona Australijczyka\n",
@@ -3396,7 +3394,7 @@
       "Expected: Mazowsze\n",
       "\n",
       "\n",
-      "Score: 0.9665515422821045\n",
+      "Score: 0.9639838933944702\n",
       "\n",
       "\n",
       "państwie leży Bombaj\n",
@@ -3405,18 +3403,16 @@
       "Expected: w Indiach\n",
       "\n",
       "\n",
-      "Score: 0.9786891341209412\n",
+      "Score: 0.9778725504875183\n",
       "\n",
       "\n",
       "numer boczny nosi czołg Rudy Czterech pancernych\n",
       "Q: Który numer boczny nosi czołg Rudy z „Czterech pancernych”?\n",
-      "A:  121.\n",
-      "Kontrowersje.\n",
-      "Pomnik\n",
+      "A:  102,\n",
       "Expected: 102\n",
       "\n",
       "\n",
-      "Score: 0.9918829798698425\n",
+      "Score: 0.9709969162940979\n",
       "\n",
       "\n",
       "budował Egipcie inżynier Tarkowski ojciec Stasia\n",
@@ -3425,7 +3421,7 @@
       "Expected: Kanał Sueski\n",
       "\n",
       "\n",
-      "Score: 0.9583545923233032\n",
+      "Score: 0.9644864201545715\n",
       "\n",
       "\n",
       "owoce kaktusów jadalne\n",
@@ -3436,16 +3432,16 @@
       "Expected: tak\n",
       "\n",
       "\n",
-      "Score: 0.9952890276908875\n",
+      "Score: 0.994006872177124\n",
       "\n",
       "\n",
       "Kwartet wykonawców\n",
       "Q: Kwartet – to ilu wykonawców?\n",
-      "A:  pięciu\n",
+      "A:  kwartet.\n",
       "Expected: czterech\tczworo\t4\n",
       "\n",
       "\n",
-      "Score: 0.9050843715667725\n",
+      "Score: 0.9396554827690125\n",
       "\n",
       "\n",
       "rzemieślnicy występują ostatniej powieści Witkacego\n",
@@ -3454,35 +3450,34 @@
       "Expected: szewcy\n",
       "\n",
       "\n",
-      "Score: 0.802682638168335\n",
+      "Score: 0.8026835918426514\n",
       "\n",
       "\n",
       "nazywa pierwiastek symbolu\n",
       "Q: Jak nazywa się pierwiastek o symbolu Bq?\n",
-      "A:  formula_72\n",
+      "A:  erythronium\n",
       "Expected: becquerel\n",
       "\n",
       "\n",
-      "Score: 0.954574465751648\n",
+      "Score: 0.8206592202186584\n",
       "\n",
       "\n",
       "Hymnem kraju pieśń Gwiaździsty sztandar\n",
       "Q: Hymnem którego kraju jest pieśń „Gwiaździsty sztandar”?\n",
-      "A:  Antigui i Barbudy.\n",
+      "A:  Holandii.\n",
       "Expected: Stanów Zjednoczonych\tUSA\n",
       "\n",
       "\n",
-      "Score: 0.9848747253417969\n",
+      "Score: 0.9821158051490784\n",
       "\n",
       "\n",
       "nazywał sztywny kapelusz męski zaokrąglonej główce wąskim uniesionym rondelku modny drugiej połowie XIX wieku\n",
       "Q: Jak nazywał się sztywny kapelusz męski o zaokrąglonej główce i wąskim lekko uniesionym rondelku, modny w drugiej połowie XIX wieku?\n",
-      "A:  męski.\n",
-      "Filcowe\n",
+      "A:  uszanki,\n",
       "Expected: melonik\n",
       "\n",
       "\n",
-      "Score: 0.9723314642906189\n",
+      "Score: 0.9845350384712219\n",
       "\n",
       "\n",
       "nazywa wypukła wklęsła powierzchnia cieczy pobliżu ścianek naczynia\n",
@@ -3496,38 +3491,38 @@
       "\n",
       "nazywał fizyk 1876 wynalazł telefon\n",
       "Q: Jak nazywał się fizyk, który w 1876 r. wynalazł telefon?\n",
-      "A:  Antonio Meucci\n",
+      "A: James Dewar\n",
       "Expected: Aleksander Graham Bell\n",
       "\n",
       "\n",
-      "Score: 0.9901991486549377\n",
+      "Score: 0.9764094948768616\n",
       "\n",
       "\n",
       "brzmi ulubione powiedzonko klucznika Horeszków Gerwazego\n",
       "Q: Jak brzmi ulubione powiedzonko klucznika Horeszków Gerwazego?\n",
-      "A:  \"Jam jest Jacek Soplica\"\n",
+      "A:  „wuj”\n",
       "Expected: mopanku\n",
       "\n",
       "\n",
-      "Score: 0.7112262845039368\n",
+      "Score: 0.5165677070617676\n",
       "\n",
       "\n",
       "gazu powietrzu\n",
       "Q: Którego gazu jest najwięcej w powietrzu?\n",
-      "A:  radonu\n",
+      "A:  metanu\n",
       "Expected: azotu\n",
       "\n",
       "\n",
-      "Score: 0.9886326193809509\n",
+      "Score: 0.9033442735671997\n",
       "\n",
       "\n",
       "jadowity występuje Polsce\n",
       "Q: Czy szalej jadowity występuje w Polsce?\n",
-      "A:  Dominantami są turzyca nibyciborowata i szalej jadowity.\n",
+      "A:  W Polsce notowany na następujących gatunkach roślin: szalej jadowity\n",
       "Expected: tak\n",
       "\n",
       "\n",
-      "Score: 0.9690682291984558\n",
+      "Score: 0.9546449780464172\n",
       "\n",
       "\n",
       "przysłowia nos tabakiery tabakiera nosa\n",
@@ -3536,10 +3531,10 @@
       "Expected: tabakiera dla nosa\n",
       "\n",
       "\n",
-      "Score: 0.04583461210131645\n",
+      "Score: 0.05403664708137512\n",
       "\n",
       "\n",
-      "Accuracy: 40.00%\n"
+      "Accuracy: 60.00%\n"
      ]
     }
    ],
@@ -3604,7 +3599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
