use model with gpu

--- a/question-answering-challenge.ipynb
+++ b/question-answering-challenge.ipynb
@@ -25,40 +25,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "plwiki-latest-pages-articles.xml.bz2: 100%|██████████| 2.35G/2.35G [2:06:48<00:00, 332kB/s]    "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wikipedia dump downloaded successfully: plwiki-latest-pages-articles.xml.bz2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "from tqdm import tqdm\n",
@@ -3166,14 +3133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Device set to use cpu\n"
+      "Device set to use cuda:0\n"
      ]
     }
    ],
@@ -3184,14 +3151,14 @@
     "# Inicjalizacja Elasticsearch i pipeline QA\n",
     "es = Elasticsearch(\"http://localhost:9200\")\n",
     "qa_pipeline = pipeline(\"question-answering\", model=\"radlab/polish-qa-v2\")\n",
-    "# qa_pipeline = pipeline(\"question-answering\", model=\"henryk/bert-base-multilingual-cased-finetuned-polish-squad2\")\n",
+    "#qa_pipeline = pipeline(\"question-answering\", model=\"henryk/bert-base-multilingual-cased-finetuned-polish-squad2\", device=0)\n",
     "# qa_pipeline = pipeline(\"question-answering\", model=\"sdadas/polish-roberta-large-v2\") <- super bad\n",
     "# qa_pipeline = pipeline(\"question-answering\", model=\"sdadas/polish-gpt2-xl\") <- super bad as well"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3244,7 +3211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3261,14 +3228,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "stworzył Tomb Raider\n",
+      "stworzył Tomb Raider ?\n",
       "Pytanie: Kto stworzył Tomb Raider?\n",
       "Najlepsza odpowiedź:  Toby Gard i Paul Howard Douglasa,\n",
       "Score: 0.9921822547912598\n"
@@ -3282,21 +3249,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nazywa bohaterka gier komputerowych serii Tomb Raider\n",
+      "nazywa bohaterka gier komputerowych serii Tomb Raider ?\n",
       "Pytanie: Jak nazywa się bohaterka gier komputerowych z serii Tomb Raider?\n",
       "Najlepsza odpowiedź:  Lary Croft\n",
       "Score: 0.9942718744277954\n",
-      "państwach starożytnych powoływani posłowie poselstwa\n",
+      "państwach starożytnych powoływani posłowie poselstwa ?\n",
       "Pytanie: Czy w państwach starożytnych powoływani byli posłowie i poselstwa?\n",
       "Najlepsza odpowiedź:  byli powoływani do służby wojskowej\n",
-      "Score: 0.10543614625930786\n"
+      "Score: 0.10543641448020935\n"
      ]
     }
    ],
@@ -3316,17 +3283,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pełnych tygodni rok kalendarzowy\n",
+      "pełnych tygodni rok kalendarzowy ?\n",
       "Pytanie: Ile pełnych tygodni ma rok kalendarzowy?\n",
       "Najlepsza odpowiedź:  dziesięciu\n",
-      "Score: 0.8816742300987244\n"
+      "Score: 0.8816749453544617\n"
      ]
     }
    ],
@@ -3344,60 +3311,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nazywa pierwsza litera alfabetu greckiego\n",
+      "nazywa pierwsza litera alfabetu greckiego ?\n",
       "Q: Jak nazywa się pierwsza litera alfabetu greckiego?\n",
       "A: Alfa\n",
       "Expected: alfa\n",
       "\n",
       "\n",
-      "Score: 0.953810453414917\n",
+      "Score: 0.9538103342056274\n",
       "\n",
       "\n",
-      "nazywa dowolny odcinek łączący punkty okręgu\n",
+      "nazywa dowolny odcinek łączący punkty okręgu ?\n",
       "Q: Jak nazywa się dowolny odcinek łączący dwa punkty okręgu?\n",
       "A:  okręgu.\n",
       "Cięciwą\n",
       "Expected: cięciwa\n",
       "\n",
       "\n",
-      "Score: 0.990360677242279\n",
+      "Score: 0.9903605580329895\n",
       "\n",
       "\n",
-      "państwie rozpoczyna akcja powieści pustyni puszczy\n",
+      "państwie rozpoczyna akcja powieści „ pustyni puszczy ” ?\n",
       "Q: W którym państwie rozpoczyna się akcja powieści „W pustyni i w puszczy”?\n",
       "A:  egipskiego\n",
       "Expected: w Egipcie\n",
       "\n",
       "\n",
-      "Score: 0.8773928880691528\n",
+      "Score: 0.8773927688598633\n",
       "\n",
       "\n",
-      "państwach starożytnych powoływani posłowie poselstwa\n",
+      "państwach starożytnych powoływani posłowie poselstwa ?\n",
       "Q: Czy w państwach starożytnych powoływani byli posłowie i poselstwa?\n",
       "A:  System taki panował głównie w państwach starożytnych\n",
       "Expected: tak\n",
       "\n",
       "\n",
-      "Score: 0.4257482886314392\n",
+      "Score: 0.4257476329803467\n",
       "\n",
       "\n",
-      "zespole występowała Hanka filmie Żona Australijczyka\n",
+      "jakim zespole występowała Hanka filmie „ Żona Australijczyka ” ?\n",
       "Q: W jakim zespole występowała Hanka w filmie „Żona dla Australijczyka”?\n",
       "A:  Meteory\n",
       "Expected: Mazowsze\n",
       "\n",
       "\n",
-      "Score: 0.9639838933944702\n",
+      "Score: 0.9639840722084045\n",
       "\n",
       "\n",
-      "państwie leży Bombaj\n",
+      "państwie leży Bombaj ?\n",
       "Q: W którym państwie leży Bombaj?\n",
       "A:  indyjski\n",
       "Expected: w Indiach\n",
@@ -3406,25 +3373,25 @@
       "Score: 0.9778725504875183\n",
       "\n",
       "\n",
-      "numer boczny nosi czołg Rudy Czterech pancernych\n",
+      "numer boczny nosi czołg Rudy „ Czterech pancernych ” ?\n",
       "Q: Który numer boczny nosi czołg Rudy z „Czterech pancernych”?\n",
       "A:  102,\n",
       "Expected: 102\n",
       "\n",
       "\n",
-      "Score: 0.9709969162940979\n",
+      "Score: 0.9709957838058472\n",
       "\n",
       "\n",
-      "budował Egipcie inżynier Tarkowski ojciec Stasia\n",
+      "budował Egipcie inżynier Tarkowski , ojciec Stasia ?\n",
       "Q: Co budował w Egipcie inżynier Tarkowski, ojciec Stasia?\n",
       "A:  świątyni słońca\n",
       "Expected: Kanał Sueski\n",
       "\n",
       "\n",
-      "Score: 0.9644864201545715\n",
+      "Score: 0.964486300945282\n",
       "\n",
       "\n",
-      "owoce kaktusów jadalne\n",
+      "owoce niektórych kaktusów jadalne ?\n",
       "Q: Czy owoce niektórych kaktusów są jadalne?\n",
       "A:  Owoce są jadalne.\n",
       "Systematyka.\n",
@@ -3435,34 +3402,34 @@
       "Score: 0.994006872177124\n",
       "\n",
       "\n",
-      "Kwartet wykonawców\n",
+      "Kwartet – ilu wykonawców ?\n",
       "Q: Kwartet – to ilu wykonawców?\n",
       "A:  kwartet.\n",
       "Expected: czterech\tczworo\t4\n",
       "\n",
       "\n",
-      "Score: 0.9396554827690125\n",
+      "Score: 0.9396551847457886\n",
       "\n",
       "\n",
-      "rzemieślnicy występują ostatniej powieści Witkacego\n",
+      "rzemieślnicy występują ostatniej powieści Witkacego ?\n",
       "Q: Którzy rzemieślnicy występują w ostatniej powieści Witkacego?\n",
       "A:  budujący szosę\n",
       "Expected: szewcy\n",
       "\n",
       "\n",
-      "Score: 0.8026835918426514\n",
+      "Score: 0.80268394947052\n",
       "\n",
       "\n",
-      "nazywa pierwiastek symbolu\n",
+      "nazywa pierwiastek symbolu Bq ?\n",
       "Q: Jak nazywa się pierwiastek o symbolu Bq?\n",
       "A:  erythronium\n",
       "Expected: becquerel\n",
       "\n",
       "\n",
-      "Score: 0.8206592202186584\n",
+      "Score: 0.820658266544342\n",
       "\n",
       "\n",
-      "Hymnem kraju pieśń Gwiaździsty sztandar\n",
+      "Hymnem kraju pieśń „ Gwiaździsty sztandar ” ?\n",
       "Q: Hymnem którego kraju jest pieśń „Gwiaździsty sztandar”?\n",
       "A:  Holandii.\n",
       "Expected: Stanów Zjednoczonych\tUSA\n",
@@ -3471,7 +3438,7 @@
       "Score: 0.9821158051490784\n",
       "\n",
       "\n",
-      "nazywał sztywny kapelusz męski zaokrąglonej główce wąskim uniesionym rondelku modny drugiej połowie XIX wieku\n",
+      "nazywał sztywny kapelusz męski zaokrąglonej główce wąskim lekko uniesionym rondelku , modny drugiej połowie XIX wieku ?\n",
       "Q: Jak nazywał się sztywny kapelusz męski o zaokrąglonej główce i wąskim lekko uniesionym rondelku, modny w drugiej połowie XIX wieku?\n",
       "A:  uszanki,\n",
       "Expected: melonik\n",
@@ -3480,7 +3447,7 @@
       "Score: 0.9845350384712219\n",
       "\n",
       "\n",
-      "nazywa wypukła wklęsła powierzchnia cieczy pobliżu ścianek naczynia\n",
+      "nazywa wypukła wklęsła powierzchnia cieczy pobliżu ścianek naczynia ?\n",
       "Q: Jak nazywa się wypukła albo wklęsła powierzchnia cieczy w pobliżu ścianek naczynia?\n",
       "A:  menisku:\n",
       "Expected: menisk\n",
@@ -3489,34 +3456,34 @@
       "Score: 0.9649572372436523\n",
       "\n",
       "\n",
-      "nazywał fizyk 1876 wynalazł telefon\n",
+      "nazywał fizyk , 1876 r . wynalazł telefon ?\n",
       "Q: Jak nazywał się fizyk, który w 1876 r. wynalazł telefon?\n",
       "A: James Dewar\n",
       "Expected: Aleksander Graham Bell\n",
       "\n",
       "\n",
-      "Score: 0.9764094948768616\n",
+      "Score: 0.9764096140861511\n",
       "\n",
       "\n",
-      "brzmi ulubione powiedzonko klucznika Horeszków Gerwazego\n",
+      "brzmi ulubione powiedzonko klucznika Horeszków Gerwazego ?\n",
       "Q: Jak brzmi ulubione powiedzonko klucznika Horeszków Gerwazego?\n",
       "A:  „wuj”\n",
       "Expected: mopanku\n",
       "\n",
       "\n",
-      "Score: 0.5165677070617676\n",
+      "Score: 0.5165684223175049\n",
       "\n",
       "\n",
-      "gazu powietrzu\n",
+      "gazu najwięcej powietrzu ?\n",
       "Q: Którego gazu jest najwięcej w powietrzu?\n",
       "A:  metanu\n",
       "Expected: azotu\n",
       "\n",
       "\n",
-      "Score: 0.9033442735671997\n",
+      "Score: 0.9033440947532654\n",
       "\n",
       "\n",
-      "jadowity występuje Polsce\n",
+      "szalej jadowity występuje Polsce ?\n",
       "Q: Czy szalej jadowity występuje w Polsce?\n",
       "A:  W Polsce notowany na następujących gatunkach roślin: szalej jadowity\n",
       "Expected: tak\n",
@@ -3525,13 +3492,13 @@
       "Score: 0.9546449780464172\n",
       "\n",
       "\n",
-      "przysłowia nos tabakiery tabakiera nosa\n",
+      "przysłowia nos tabakiery tabakiera nosa ?\n",
       "Q: Według przysłowia nos jest dla tabakiery czy tabakiera dla nosa?\n",
       "A:  ludowe.\n",
       "Expected: tabakiera dla nosa\n",
       "\n",
       "\n",
-      "Score: 0.05403664708137512\n",
+      "Score: 0.05403676629066467\n",
       "\n",
       "\n",
       "Accuracy: 60.00%\n"
